- Adapted to pkg-config: libfizmo-specific config.*.mk, improved flags    for libxml2.

--- a/src/interpreter/Makefile
+++ b/src/interpreter/Makefile
@@ -4,7 +4,7 @@ include ../../config.mk
 ifneq ($(DISABLE_LIBXML2),)
 CFLAGS_LIBXML2 = -DDISABLE_LIBXML2=
 else
-CFLAGS_LIBXML2 = -I$(LIBXML2_INC_DIR)
+CFLAGS_LIBXML2 = $(LIBXML2_PKG_CFLAGS) $(LIBXML2_NONPKG_CFLAGS)
 endif
 
 ifneq ($(ENABLE_GDB_SYMBOLS),)
