--- a/Makefile.am
+++ b/Makefile.am
@@ -15,6 +15,8 @@ SUBDIRS = src/tools src/interpreter .
 noinst_LIBRARIES = libfizmo.a
 
 libfizmo.a:
+	cd src/tools ; make
+	cd src/interpreter ; make
 	mkdir -p "$(tmplibdir)" ; \
 	cd "$(tmplibdir)" ; \
 	"$(AR)" x ../src/tools/libtools.a ; \
