--- a/Makefile.am
+++ b/Makefile.am
@@ -4,9 +4,7 @@ AUTOMAKE_OPTIONS = -Wno-override
 tmplibdir = libfizmotmp
 localedir = $(datarootdir)/fizmo/locales
 
-if FIZMO_BUILD_PREFIX_EMPTY
-  fizmo_build_prefix=$(DESTDIR)$(prefix)
-endif
+fizmo_build_prefix=$(DEV_BUILD_PREFIX)
 
 PKG_DIR = $(fizmo_build_prefix)/lib/pkgconfig
 PKGFILE = $(PKG_DIR)/libfizmo.pc
