Adapted to automake v1.14 "subdir-objects" option.

--- a/src/tools/Makefile.am
+++ b/src/tools/Makefile.am
@@ -29,6 +29,8 @@
 # THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 
+AUTOMAKE_OPTIONS = subdir-objects
+
 localedir = $(datarootdir)/fizmo/locales
 
 AM_CFLAGS =
