Added FIZMO_DIST_VERSION def to compilation.

--- a/src/interpreter/Makefile.am
+++ b/src/interpreter/Makefile.am
@@ -48,6 +48,10 @@ if ENABLE_TRACING
 AM_CFLAGS += -DENABLE_TRACING=
 endif
 
+if FIZMO_DIST_VERSION
+AM_CFLAGS += -DFIZMO_DIST_VERSION=\"$(FIZMO_DIST_VERSION)\"
+endif
+
 if ENABLE_BABEL
 AM_CPPFLAGS += -DUSE_LIBXML2
 AM_CFLAGS += $(libxml2_CFLAGS)
