--- a/Makefile.am
+++ b/Makefile.am
@@ -35,10 +35,16 @@ AUTOMAKE_OPTIONS = -Wno-override
 tmplibdir = libfizmotmp
 localedir = $(datarootdir)/fizmo/locales
 
-fizmo_build_prefix=$(DEV_BUILD_PREFIX)
+if FIZMO_DIST_BUILD
+  dev_prefix=$(FIZMO_DIST_BUILD_PREFIX)
+else
+  dev_prefix=$(prefix)
+endif
 
-PKG_DIR = $(fizmo_build_prefix)/lib/pkgconfig
-PKGFILE = $(PKG_DIR)/libfizmo.pc
+fizmo_build_prefix=$(dev_prefix)
+
+pkg_dir = $(dev_prefix)/lib/pkgconfig
+pkgfile = $(pkg_dir)/libfizmo.pc
 
 SUBDIRS = src/tools src/interpreter .
 noinst_LIBRARIES = libfizmo.a
@@ -60,34 +66,35 @@ libfizmo.a::
 	rm -r "$(tmplibdir)"
 
 install-dev:: libfizmo.a
-	mkdir -p "$(fizmo_build_prefix)/lib/fizmo"
-	cp libfizmo.a "$(fizmo_build_prefix)/lib/fizmo"
-	mkdir -p "$(fizmo_build_prefix)/include/fizmo/interpreter"
-	cp src/interpreter/*.h "$(fizmo_build_prefix)/include/fizmo/interpreter"
-	mkdir -p "$(fizmo_build_prefix)/include/fizmo/tools"
-	cp src/tools/*.h "$(fizmo_build_prefix)/include/fizmo/tools"
-	mkdir -p "$(fizmo_build_prefix)/include/fizmo/screen_interface"
+	mkdir -p "$(DESTDIR)$(dev_prefix)/lib/fizmo"
+	cp libfizmo.a "$(DESTDIR)$(dev_prefix)/lib/fizmo"
+	mkdir -p "$(DESTDIR)$(dev_prefix)/include/fizmo/interpreter"
+	cp src/interpreter/*.h \
+	  "$(DESTDIR)$(dev_prefix)/include/fizmo/interpreter"
+	mkdir -p "$(DESTDIR)$(dev_prefix)/include/fizmo/tools"
+	cp src/tools/*.h "$(DESTDIR)$(dev_prefix)/include/fizmo/tools"
+	mkdir -p "$(DESTDIR)$(dev_prefix)/include/fizmo/screen_interface"
 	cp src/screen_interface/*.h \
-	  "$(fizmo_build_prefix)/include/fizmo/screen_interface"
+	  "$(DESTDIR)$(dev_prefix)/include/fizmo/screen_interface"
 	cp src/screen_interface/*.cpp \
-	  "$(fizmo_build_prefix)/include/fizmo/screen_interface"
-	cp -r src/sound_interface "$(fizmo_build_prefix)/include/fizmo/"
-	cp -r src/filesys_interface "$(fizmo_build_prefix)/include/fizmo/"
-	cp -r src/blorb_interface "$(fizmo_build_prefix)/include/fizmo/"
-	mkdir -p "$(PKG_DIR)"
-	echo 'prefix=$(fizmo_build_prefix)' >"$(PKGFILE)"
-	echo 'exec_prefix=$${prefix}' >>"$(PKGFILE)"
-	echo 'libdir=$${exec_prefix}/lib/fizmo' >>"$(PKGFILE)"
-	echo 'includedir=$${prefix}/include/fizmo' >>"$(PKGFILE)"
-	echo >>"$(PKGFILE)"
-	echo 'Name: libfizmo' >>"$(PKGFILE)"
-	echo 'Description: libfizmo' >>"$(PKGFILE)"
-	echo 'Version: 0.7.13' >>"$(PKGFILE)"
-	echo "Requires: $(LIBFIZMO_REQS)" >>"$(PKGFILE)"
-	echo 'Requires.private:' >>"$(PKGFILE)"
-	echo 'Cflags: -I$(fizmo_build_prefix)/include/fizmo $(LIBXML2_NONPKG_CFLAGS)' >>"$(PKGFILE)"
-	echo 'Libs: -L$(fizmo_build_prefix)/lib/fizmo -lfizmo $(LIBXML2_NONPKG_LIBS)'  >>"$(PKGFILE)"
-	echo >>"$(PKGFILE)"
+	  "$(DESTDIR)$(dev_prefix)/include/fizmo/screen_interface"
+	cp -r src/sound_interface "$(DESTDIR)$(dev_prefix)/include/fizmo/"
+	cp -r src/filesys_interface "$(DESTDIR)$(dev_prefix)/include/fizmo/"
+	cp -r src/blorb_interface "$(DESTDIR)$(dev_prefix)/include/fizmo/"
+	mkdir -p "$(pkg_dir)"
+	echo 'prefix=$(dev_prefix)' >"$(pkgfile)"
+	echo 'exec_prefix=$${prefix}' >>"$(pkgfile)"
+	echo 'libdir=$${exec_prefix}/lib/fizmo' >>"$(pkgfile)"
+	echo 'includedir=$${prefix}/include/fizmo' >>"$(pkgfile)"
+	echo >>"$(pkgfile)"
+	echo 'Name: libfizmo' >>"$(pkgfile)"
+	echo 'Description: libfizmo' >>"$(pkgfile)"
+	echo 'Version: 0.7.13' >>"$(pkgfile)"
+	echo "Requires: $(LIBFIZMO_REQS)" >>"$(pkgfile)"
+	echo 'Requires.private:' >>"$(pkgfile)"
+	echo 'Cflags: -I$(dev_prefix)/include/fizmo $(LIBXML2_NONPKG_CFLAGS)' >>"$(pkgfile)"
+	echo 'Libs: -L$(dev_prefix)/lib/fizmo -lfizmo $(LIBXML2_NONPKG_LIBS)'  >>"$(pkgfile)"
+	echo >>"$(pkgfile)"
 
 install-data-local::
 	mkdir -p "$(DESTDIR)$(localedir)"
@@ -101,20 +108,17 @@ install-data-local::
 # a - sign. rmdir may fail in clean-dev in case other libs have installed
 # development files, or in case clean-dev has been run before.
 clean-dev::
-	-rm    "$(fizmo_build_prefix)/lib/fizmo/libfizmo.a"
-	-rmdir "$(fizmo_build_prefix)/lib/fizmo"
-	rm -rf "$(fizmo_build_prefix)/include/fizmo/interpreter"
-	rm -rf "$(fizmo_build_prefix)/include/fizmo/tools"
-	rm -rf "$(fizmo_build_prefix)/include/fizmo/sound_interface"
-	rm -rf "$(fizmo_build_prefix)/include/fizmo/filesys_interface"
-	rm -rf "$(fizmo_build_prefix)/include/fizmo/blorb_interface"
-	-rm    "$(fizmo_build_prefix)/include/fizmo/screen_interface/ScreenInterface.cpp"
-	-rm    "$(fizmo_build_prefix)/include/fizmo/screen_interface/ScreenInterface.h"
-	-rm    "$(fizmo_build_prefix)/include/fizmo/screen_interface/screen_interface.h"
-	-rmdir "$(fizmo_build_prefix)/include/fizmo/screen_interface"
-	-rmdir "$(fizmo_build_prefix)/include/fizmo"
-	-rmdir "$(fizmo_build_prefix)/include"
-	-rm    "$(PKGFILE)"
-	-rmdir "$(PKG_DIR)"
-	-rmdir "$(fizmo_build_prefix)/lib"
+	-rm    "$(DESTDIR)$(dev_prefix)/lib/fizmo/libfizmo.a"
+	-rmdir "$(DESTDIR)$(dev_prefix)/lib/fizmo"
+	rm -rf "$(DESTDIR)$(dev_prefix)/include/fizmo/interpreter"
+	rm -rf "$(DESTDIR)$(dev_prefix)/include/fizmo/tools"
+	rm -rf "$(DESTDIR)$(dev_prefix)/include/fizmo/sound_interface"
+	rm -rf "$(DESTDIR)$(dev_prefix)/include/fizmo/filesys_interface"
+	rm -rf "$(DESTDIR)$(dev_prefix)/include/fizmo/blorb_interface"
+	-rm    "$(DESTDIR)$(dev_prefix)/include/fizmo/screen_interface/ScreenInterface.cpp"
+	-rm    "$(DESTDIR)$(dev_prefix)/include/fizmo/screen_interface/ScreenInterface.h"
+	-rm    "$(DESTDIR)$(dev_prefix)/include/fizmo/screen_interface/screen_interface.h"
+	-rmdir "$(DESTDIR)$(dev_prefix)/include/fizmo/screen_interface"
+	-rmdir "$(DESTDIR)$(dev_prefix)/include/fizmo"
+	-rm    "$(pkgfile)"
 
