Committed updates from autoreconf.

--- a/src/tools/Makefile.in
+++ b/src/tools/Makefile.in
@@ -294,7 +294,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = subdir-objects
-AM_CFLAGS = $(am__append_1) \
+AM_CFLAGS = -fPIC $(am__append_1) \
 	-DI18N_DEFAULT_SEARCH_PATH=\"$(localedir)\"
 noinst_LIBRARIES = libtools.a
 libtools_a_SOURCES = ../locales/libfizmo_locales.c filesys.c filesys_c.c \
