--- a/src/interpreter/Makefile.in
+++ b/src/interpreter/Makefile.in
@@ -327,7 +327,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-AM_CFLAGS = $(am__append_1) $(am__append_2) $(am__append_4) \
+AM_CFLAGS = -fPIC $(am__append_1) $(am__append_2) $(am__append_4) \
 	$(am__append_6) $(am__append_7) $(am__append_8) \
 	$(am__append_10) $(am__append_12) $(am__append_14) \
 	$(am__append_16) $(am__append_17) $(am__append_18) \
