Updated autofoo for libfizmo 0.7.15.

--- a/Makefile.in
+++ b/Makefile.in
@@ -339,6 +339,7 @@ pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
+runstatedir = @runstatedir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
@@ -351,6 +352,8 @@ AUTOMAKE_OPTIONS = -Wno-override
 tmplibdir = libfizmotmp
 @FIZMO_DIST_BUILD_FALSE@dev_prefix = $(DESTDIR)/$(prefix)
 @FIZMO_DIST_BUILD_TRUE@dev_prefix = $(FIZMO_DIST_BUILD_PREFIX)
+@FIZMO_DIST_BUILD_FALSE@pkg_prefix = $(prefix)
+@FIZMO_DIST_BUILD_TRUE@pkg_prefix = $(FIZMO_DIST_BUILD_PREFIX)
 fizmo_build_prefix = $(dev_prefix)
 pkg_dir = $(dev_prefix)/lib/pkgconfig
 pkgfile = $(pkg_dir)/libfizmo.pc
@@ -875,7 +878,7 @@ install-dev:: libfizmo.a
 	cp -r src/filesys_interface "$(dev_prefix)/include/fizmo/"
 	cp -r src/blorb_interface "$(dev_prefix)/include/fizmo/"
 	mkdir -p "$(pkg_dir)"
-	echo 'prefix=$(dev_prefix)' >"$(pkgfile)"
+	echo 'prefix=$(pkg_prefix)' >"$(pkgfile)"
 	echo 'exec_prefix=$${prefix}' >>"$(pkgfile)"
 	echo 'libdir=$${exec_prefix}/lib/fizmo' >>"$(pkgfile)"
 	echo 'includedir=$${prefix}/include/fizmo' >>"$(pkgfile)"
@@ -885,8 +888,8 @@ install-dev:: libfizmo.a
 	echo 'Version: 0.7.15' >>"$(pkgfile)"
 	echo "Requires: $(LIBFIZMO_REQS)" >>"$(pkgfile)"
 	echo 'Requires.private:' >>"$(pkgfile)"
-	echo 'Cflags: -I$(dev_prefix)/include/fizmo $(LIBXML2_NONPKG_CFLAGS)' >>"$(pkgfile)"
-	echo 'Libs: -L$(dev_prefix)/lib/fizmo -lfizmo $(LIBXML2_NONPKG_LIBS) -lm'  >>"$(pkgfile)"
+	echo 'Cflags: -I$(pkg_prefix)/include/fizmo $(LIBXML2_NONPKG_CFLAGS)' >>"$(pkgfile)"
+	echo 'Libs: -L$(pkg_prefix)/lib/fizmo -lfizmo $(LIBXML2_NONPKG_LIBS) -lm'  >>"$(pkgfile)"
 	echo >>"$(pkgfile)"
 
 install-data-local::
