--- a/src/interpreter/Makefile.in
+++ b/src/interpreter/Makefile.in
@@ -137,8 +137,9 @@ POST_UNINSTALL = :
 @ENABLE_DEBUGGER_TRUE@am__append_20 = -DENABLE_DEBUGGER=
 subdir = src/interpreter
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
-am__aclocal_m4_deps = $(top_srcdir)/config-libs.m4 \
-	$(top_srcdir)/config-conds.m4 $(top_srcdir)/configure.ac
+am__aclocal_m4_deps = $(top_srcdir)/config-flags.m4 \
+	$(top_srcdir)/config-libs.m4 $(top_srcdir)/config-conds.m4 \
+	$(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 DIST_COMMON = $(srcdir)/Makefile.am $(am__DIST_COMMON)
@@ -255,9 +256,11 @@ INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LDFLAGS = @LDFLAGS@
-LIBFIZMO_REQS = @LIBFIZMO_REQS@
+LIBFIZMO_PRIVATE_REQS = @LIBFIZMO_PRIVATE_REQS@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
+LIBXML2_NONPKG_CFLAGS = @LIBXML2_NONPKG_CFLAGS@
+LIBXML2_NONPKG_LIBS = @LIBXML2_NONPKG_LIBS@
 LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
 MKDIR_P = @MKDIR_P@
