--- a/Makefile.am
+++ b/Makefile.am
@@ -92,8 +92,8 @@ install-dev:: libfizmo.a
 	echo 'Name: libfizmo' >>"$(pkgfile)"
 	echo 'Description: libfizmo' >>"$(pkgfile)"
 	echo 'Version: 0.7.15' >>"$(pkgfile)"
-	echo 'Requires:' >>"$(pkgfile)"
-	echo "Requires.private: $(LIBFIZMO_PRIVATE_REQS)" >>"$(pkgfile)"
+	echo "Requires: $(LIBFIZMO_REQS)" >>"$(pkgfile)"
+	echo 'Requires.private:' >>"$(pkgfile)"
 	echo 'Cflags: -I$(pkg_prefix)/include/fizmo' >>"$(pkgfile)"
 	echo 'Libs: -L$(pkg_prefix)/lib/fizmo -lfizmo $(LIBXML2_NONPKG_LIBS) -lm' >>"$(pkgfile)"
 	echo 'Libs.private:' >>"$(pkgfile)"
