--- a/Makefile.in
+++ b/Makefile.in
@@ -280,7 +280,7 @@ INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LDFLAGS = @LDFLAGS@
-LIBFIZMO_PRIVATE_REQS = @LIBFIZMO_PRIVATE_REQS@
+LIBFIZMO_REQS = @LIBFIZMO_REQS@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LIBXML2_NONPKG_CFLAGS = @LIBXML2_NONPKG_CFLAGS@
@@ -889,8 +889,8 @@ install-dev:: libfizmo.a
 	echo 'Name: libfizmo' >>"$(pkgfile)"
 	echo 'Description: libfizmo' >>"$(pkgfile)"
 	echo 'Version: 0.7.15' >>"$(pkgfile)"
-	echo 'Requires:' >>"$(pkgfile)"
-	echo "Requires.private: $(LIBFIZMO_PRIVATE_REQS)" >>"$(pkgfile)"
+	echo "Requires: $(LIBFIZMO_REQS)" >>"$(pkgfile)"
+	echo 'Requires.private:' >>"$(pkgfile)"
 	echo 'Cflags: -I$(pkg_prefix)/include/fizmo' >>"$(pkgfile)"
 	echo 'Libs: -L$(pkg_prefix)/lib/fizmo -lfizmo $(LIBXML2_NONPKG_LIBS) -lm' >>"$(pkgfile)"
 	echo 'Libs.private:' >>"$(pkgfile)"
