--- a/src/tools/Makefile.in
+++ b/src/tools/Makefile.in
@@ -222,7 +222,7 @@ INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LDFLAGS = @LDFLAGS@
-LIBFIZMO_PRIVATE_REQS = @LIBFIZMO_PRIVATE_REQS@
+LIBFIZMO_REQS = @LIBFIZMO_REQS@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LIBXML2_NONPKG_CFLAGS = @LIBXML2_NONPKG_CFLAGS@
